# IVI-PROJECT-PARK-AND-GO

./: .coverage  .dockerignore  .env.example  .gitignore  DECOMPOSITION.md  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
application/: settings.py  urls.py
application/settings/: __init__.py  auth.py  base.py  database.py  email.py  test.py
bookings/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_parking_spot_alter_booking_user.py  0002_initial.py  0003_alter_booking_options_remove_booking_duration_hours_and_more.py  0003_booking_updated_at_reminder_updated_at.py  0004_booking_exclude_overlapping_active_bookings.py
core/: mixins.py
nginx/: default.conf
spots/: admin.py  models.py  tests.py  urls.py  views.py
spots/migrations/: 0001_initial.py  0002_alter_parkingspot_number.py  0002_alter_parkingspot_options.py  0003_parkingspot_updated_at.py
spots/templatetags/: pagination.py
static/css/: styles.css
static/js/: booking-slots.js  password-confirm.js  password-toggle.js
templates/: base.html
templates/includes/: form_errors.html  pagination.html
templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt
users/: admin.py  backends.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+38 files in other folders)
